--- a/runner.yaml
+++ b/runner.yaml
@@ -12,6 +12,7 @@ build:
     apt install -y libx11-xcb1
     apt install -y libasound2
     python3 -m pip install -U -r requirements.txt
+    python3 setup.py
     python3 -m camoufox fetch
     echo "END: Building the runner"
 
